--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,16 @@
         "php": ">=7.4.0",
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
-        "yiisoft/yii2-symfonymailer": "^3.0",
         "2amigos/yii2-usuario": "dev-v2.0.0-dev",
         "yiisoft/yii2-swiftmailer": "^2.1",
-        "kartik-v/yii2-grid": "dev-master"
+        "kartik-v/yii2-grid": "dev-master",
+        "kartik-v/yii2-widget-fileinput": "@dev",
+        "kartik-v/yii2-widget-datepicker": "^1.4",
+        "kartik-v/yii2-widgets": "^3.4",
+        "setasign/fpdi": "^2.3",
+        "setasign/fpdf": "^1.8",
+        "tecnickcom/tcpdf": "^6.6",
+        "yiisoft/yii2-symfonymailer": "^3.0"
     },
     "require-dev": {
         "kartik-v/yii2-widget-select2": "@dev",
