--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "setasign/fpdi": "^2.3",
         "setasign/fpdf": "^1.8",
         "tecnickcom/tcpdf": "^6.6",
-        "yiisoft/yii2-symfonymailer": "^3.0"
+        "yiisoft/yii2-symfonymailer": "^3.0",
+        "dominus77/yii2-sweetalert2-widget": "~1.3"
     },
     "require-dev": {
         "kartik-v/yii2-widget-select2": "@dev",
