--- a/.gitignore
+++ b/.gitignore
@@ -47,8 +47,10 @@ tests/_support/_generated
 /.vagrant
 
 #attachments
+!web/attachments
 web/attachments/antecedentes/*
 web/attachments/formularios/*
+
 
 protected/runtime/*
 !protected/runtime/.gitignore
