--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,14 @@ services:
       context: ./
       dockerfile: deploy/app.Dockerfile
     ports:
-      - '8090:80'
+      - '8080:80'
     networks:
       - concursos     
 
   db:
     image: mysql
     restart: always
+    command: --sql_mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION"
     environment:
       MYSQL_DATABASE: concursos
       MYSQL_USER: concursos
